how-to/cloud-interop-basic/public/common/style/app.css
/* ... */
.theme-light {
	--brand-background: var(--theme-background-primary, #fafbfe);
	--brand-border: var(--theme-background4, #eceef1);
	--brand-primary: var(--theme-brand-primary, #0a76d3);
	--brand-text: var(--theme-text-default, #111214);
	--brand-text-secondary: var(--theme-text-help, #2f3136);
	--brand-input-background: var(--theme-background5, #dddfe4);
	--brand-input-border: var(--theme-background6, #c9cbd2);
	--brand-input-border-highlight: var(--theme-input-focused, #c9cbd2);
	--brand-table-header: var(--theme-background1, #ffffff);
	--brand-table-header-text: var(--theme-text-default, #111214);
	--brand-table-row-even: var(--theme-background3, #eceef1);
	--brand-table-row-odd: var(--theme-background4, #c9cbd2);
	--brand-error: var(--theme-status-critical, #be1d1f);
	--brand-success: var(--theme-status-success, #35c759);
}

.primary {
	color: var(--brand-primary);
}

.error {
	color: var(--brand-error);
}

.success {
	color: var(--brand-success);
}

::selection {
	background-color: var(--brand-primary);
}

* {
	font-family: Inter, 'Sans Serif', sans-serif;
	box-sizing: border-box;
}

html,
body {
	height: 100%;
}

body {
	display: flex;
	justify-content: stretch;
	align-items: stretch;
	overflow: hidden;
	padding: 20px;
	margin: 0;
	background-color: var(--brand-background);
	color: var(--brand-text);
}

body.border {
	padding: 20px;
	margin: 0;
	background-color: var(--brand-background);
	color: var(--brand-text);
	border: 1px solid #000000;
	border-radius: 5px;
	width: 100%;
	height: 100%;
}

body.border-light {
	border-color: var(--brand-input-border-highlight);
}

body.small {
	padding: 15px;
}

h1 {
	font-size: 24px;
	font-weight: 700;
	line-height: 1;
	margin-block-start: 0;
	margin-block-end: 0;
}
h1.tag {
	font-size: 12px;
	font-weight: normal;
	margin-top: 5px;
	color: var(--brand-text-secondary);
}

h2 {
	font-size: 20px;
	font-weight: 700;
	line-height: 1;
	margin-block-start: 0;
	margin-block-end: 0;
}

h3 {
	font-size: 16px;
	font-weight: 700;
	line-height: 1;
	margin-block-start: 0;
	margin-block-end: 0;
}

h4 {
	font-size: 14px;
	font-weight: 700;
	line-height: 1;
	margin-block-start: 0;
	margin-block-end: 0;
}

h5 {
	font-size: 12px;
	font-weight: 700;
	line-height: 1;
	margin-block-start: 0;
	margin-block-end: 0;
}

p {
	color: var(--brand-text-secondary);
	font-size: 12px;
	margin-block-start: 0;
	margin-block-end: 0;
}

::-webkit-scrollbar {
	width: 8px;
	height: 8px;
}
::-webkit-scrollbar-track {
	background: var(--brand-input-background);
	border-radius: 5px;
}
::-webkit-scrollbar-thumb {
	background: var(--brand-border);
	border-radius: 5px;
	border: 1px solid var(--brand-input-border);
}
::-webkit-scrollbar-thumb:hover {
	border: 1px solid var(--brand-input-border-highlight);
}

main {
	min-height: 100px;
}

a {
	color: var(--brand-primary);
	font-size: 12px;
	font-weight: bold;
	outline: none;
	text-decoration: none;
}

a:hover,
a:focus {
	text-decoration: underline;
}

button,
input[type='button'],
::-webkit-file-upload-button,
a.button,
footer a {
	background-color: var(--brand-primary);
	border: 2px solid var(--brand-primary);
	color: #ffffff;
	border-radius: 5px;
	padding: 8px 20px;
	text-align: left;
	cursor: pointer;
	font-size: 12px;
	font-weight: bold;
	text-decoration: none;
	outline: 0;
	white-space: nowrap;
	transition-property: background-color, color, opacity;
	transition-duration: 200ms;
	transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
}

a.button:hover,
footer a:hover {
	text-decoration: none;
}

a.button:focus,
a.button:hover,
input[type='button']:focus,
input[type='button']:hover,
input[type='file']:focus::-webkit-file-upload-button,
input[type='file']:hover::-webkit-file-upload-button,
::-webkit-file-upload-button:hover,
footer a:focus,
footer a:not(:disabled):hover,
button:not(:disabled):focus,
button:not(:disabled):hover {
	background-image: linear-gradient(rgba(255, 255, 255, 0.1) 0 0);
}

button.image {
	width: 40px;
	height: 40px;
	padding: 0px;
	display: flex;
	align-items: center;
	justify-content: center;
}
button.image > img {
	width: 32px;
	height: 32px;
}
button.secondary {
	background-color: var(--brand-input-background);
	color: var(--brand-text);
	border-color: var(--brand-input-border);
}
button.secondary:not(:disabled):hover {
	background-color: var(--brand-input-background);
}
button.plain {
	border-color: transparent;
	background-color: transparent;
	color: var(--brand-primary);
}
button.plain:not(:disabled):not(:read-only):hover {
	border-color: transparent;
	background-color: transparent;
}

button.small,
a.button.small,
::-webkit-file-upload-button,
td button {
	padding: 5px 10px;
	font-size: 10px;
}
td button.plain {
	width: auto;
	height: auto;
}

button.center {
	text-align: center;
}

::-webkit-file-upload-button {
	margin-right: 10px;
}

pre {
	margin: 0;
	padding: 5px;
	border-radius: 5px;
	font-size: 12px;
	font-family: 'Courier New', Courier, monospace;
	white-space: pre-wrap;
	border: 1px solid var(--brand-input-border);
	background-color: var(--brand-input-background);
	width: 100%;
	min-height: 20px;
}

header {
	padding-bottom: 10px;
	border-bottom: 2px solid var(--brand-border);
}

footer {
	padding-top: 10px;
	border-top: 1px solid var(--brand-border);
}

fieldset {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	border: 0;
	padding: 0;
	font-size: 12px;
	gap: 5px;
}

fieldset.row {
	flex-direction: row;
	align-items: center;
	gap: 10px;
}

label {
	font-size: 12px;
	font-weight: 600;
}
/* ... */

